[gd_scene load_steps=8 format=2]

[ext_resource path="res://Nodes/Control/Snackbar/ActionSnackbar/ActionSnackbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Interface/Panels/tres/default_green_padding_left_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Nodes/Control/PopButton/pop_button.gd" type="Script" id=3]
[ext_resource path="res://Assets/Interface/Icons/png/check_icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Interface/Icons/png/x_icon.png" type="Texture" id=5]
[ext_resource path="res://Nodes/Control/Snackbar/ActionSnackbar/DoneCancelActionSnackbar/done_cancel_action_snackbar.gd" type="Script" id=6]
[ext_resource path="res://Assets/Interface/Panels/tres/default_grey_padding_left_panel.tres" type="StyleBox" id=7]

[node name="DoneCancelSnackbar" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Panel" parent="." index="0"]
margin_top = 298.0

[node name="BlurContainer" parent="Panel" index="0"]
margin_bottom = 62.0

[node name="BlurRect" parent="Panel/BlurContainer" index="0"]
margin_bottom = 1.0

[node name="BlurRect2" parent="Panel/BlurContainer" index="1"]
margin_top = 1.0
margin_bottom = 4.0

[node name="BlurRect3" parent="Panel/BlurContainer" index="2"]
margin_top = 4.0
margin_bottom = 13.0

[node name="BlurRect4" parent="Panel/BlurContainer" index="3"]
margin_top = 13.0
margin_bottom = 29.0

[node name="BlurRect5" parent="Panel/BlurContainer" index="4"]
margin_top = 29.0
margin_bottom = 45.0

[node name="BlurRect6" parent="Panel/BlurContainer" index="5"]
margin_top = 45.0
margin_bottom = 62.0

[node name="Margin" parent="Panel" index="1"]
margin_bottom = 62.0

[node name="HBox" parent="Panel/Margin" index="0"]
margin_bottom = 37.0

[node name="CancelButton" type="Button" parent="Panel/Margin/HBox" index="0"]
margin_right = 86.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Cancel"
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Panel/Margin/HBox/CancelButton" index="0"]
self_modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 4, 3 )

[node name="DoneButton" type="Button" parent="Panel/Margin/HBox" index="1"]
margin_left = 90.0
margin_right = 220.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Done"
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Panel/Margin/HBox/DoneButton" index="0"]
self_modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 4, 3 )

[connection signal="pressed" from="Panel/Margin/HBox/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Panel/Margin/HBox/DoneButton" to="." method="_on_DoneButton_pressed"]
